<resources>
    <string name="app_name">MoodHub</string>
    <string name="button_settings">À propos</string>
    <string name="about_text">Bonjour !\n\nCette application Android a été créée dans le cadre du module de cours \"644-1 Développement Mobile &amp; Cloud\" par Bastien Salamin, Alexandre Martroye de Joly, Sergio Gomez Cabeiro et Romain Marguet, étudiants de la classe 605_3.\n\nVous pouvez consulter la page GitHub du projet sur le lien suivant :\n<a href="https://github.com/BastienSalamin/ProjetHackaton">https://github.com/BastienSalamin/ProjetHackaton</a></string>
    <string name="app_resume">Semaine n°</string>
    <string name="button_next">Suivant</string>
    <string name="button_create">Créer un examen</string>
    <string name="exam_label_subject">Sujet :</string>
    <string name="exam_label_date">Date :</string>
    <string name="exam_hint_date">01.01.2023</string>
    <string name="exam_label_duration">Durée :</string>
    <string name="exam_hint_duration">60\'</string>
    <string name="exam_label_room">Salle :</string>
    <string name="button_login">Se connecter</string>
    <string name="add_student">Ajouter un étudiant</string>
    <string name="student_label_class">Classe :</string>
    <string name="student_hint_class">N° de la classe</string>
    <string name="student_label_surname">Nom :</string>
    <string name="student_hint_surname">Nom de famille</string>
    <string name="student_label_name">Prénom :</string>
    <string name="student_hint_name">Prénom</string>
    <string name="button_student_save_changes">Enregistrer</string>
    <string name="button_student_delete">Supprimer</string>
    <string name="switch_dark_mode">Dark Mode</string>
    <string name="login_name_text">Nom d\'utilisateur</string>
    <string name="login_hint">bonjour.bonsoir@hes-so.ch</string>
    <string name="password_text">Mot de passe</string>
    <string name="password_hint">123456</string>
    <string name="connecting">Connexion</string>
    <string name="course_name">Nom du cours</string>
    <string name="hello_teacher">Bonjour </string>
</resources>