<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.student.StudentActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/labelClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/student_label_class"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/studentClass"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/student_hint_class"
        android:inputType="textNoSuggestions"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/labelClass" />

    <TextView
        android:id="@+id/labelSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/student_label_surname"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelClass" />

    <EditText
        android:id="@+id/studentSurname"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/student_hint_surname"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/labelSurname"
        app:layout_constraintTop_toBottomOf="@id/studentClass" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/student_label_name"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSurname" />

    <EditText
        android:id="@+id/studentName"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/student_hint_name"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toEndOf="@+id/labelName"
        app:layout_constraintTop_toBottomOf="@id/studentSurname" />

</androidx.constraintlayout.widget.ConstraintLayout>